--- a/bankapp/bankapp-ds.yml
+++ b/bankapp/bankapp-ds.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: bankapp
-        image: adijaiswal/bankapp:v4
+        image: srdangat/gcbank:v9
         ports:
         - containerPort: 8080
         env:
