--- a/bankapp/bankapp-ds.yml
+++ b/bankapp/bankapp-ds.yml
@@ -35,9 +35,9 @@ kind: Service
 metadata:
   name: bankapp-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
-  - port: 80
+  - port: 8080
     targetPort: 8080
   selector:
     app: bankapp
